<resources>
    <string name="app_name">Blogx</string>

    <string name="app_logo_description">App Logo</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="password_reset_info">We have emailed you instructions for setting your password. If an account exists with the email you entered you will receive link to reset your password.</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="login_launcher_fragment">Login</string>
    <string name="register_launcher_fragment">Register</string>
    <string name="forgot_password_launcher_fragment">Forgot password</string>
    <string name="login_login_fragment_text">Login</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="register">Register</string>
    <string name="registration_error_must_fill_all_fields">All fields are required.</string>
    <string name="registration_error_password_must_match">Password must match</string>
    <string name="registration_error_none">None</string>
    <string name="login_error_must_fill_all_fields">You can\'t login without an email and password.</string>
    <string name="login_error_none">None</string>
    <string name="text_success">Success</string>
    <string name="text_error">Error</string>
    <string name="text_ok">OK</string>
    <string name="delete">Delete</string>
    <string name="create_blog_fragment_hint_write_some_content">Write some content&#8230;</string>
    <string name="create_blog_fragment_touch_to_change_image">Touch to change image</string>
    <string name="create_blog_fragment_hint_write_a_blog_title">Write a blog title&#8230;</string>
    <string name="account_fragment_helper_email">Email</string>
    <string name="account_fragment_helper_username">Username</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your username</string>
    <string name="change_password">Change password</string>
    <string name="button_logout">Logout</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_password">Update password</string>
    <string name="menu_title_edit">Edit</string>
    <string name="menu_title_save">Save</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="no_more_results">No more results&#8230;</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_update_account">Update account</string>
    <string name="fragment_blog">Blog</string>
    <string name="fragment_view_blog">View</string>
    <string name="fragment_update_blog">Update</string>
    <string name="fragment_create_blog">Create</string>
    <string name="filter_options">Filter options</string>
    <string name="author_or_date">Filter by author or date</string>
    <string name="filter_author">Author</string>
    <string name="filter_date">Date</string>
    <string name="asc_desc">Ascending or descending order</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be undone.</string>
    <string name="error_something_wrong_with_image">Something went wrong with the image.</string>
    <string name="error_must_select_image">You must select an image.</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="AuthNavHost">AuthNavHost</string>
    <string name="blog_filter_apply_button">Apply</string>
    <string name="blog_filter_cancel_button">Cancel</string>
    <string name="menu_publish">Publish</string>
    <string name="image_description_splash_logo">splash logo</string>
    <string name="image_description_blog_image">Blog Image</string>
    <string name="hint_your_blog_title">Your Blog Title</string>
    <string name="button_text_touch_to_change_image">Touch to change image</string>
    <string name="hint_your_blog_content">Your Blog Content</string>


    <!-- API Errors -->
    <string name="username_field_required">Username field required.</string>
    <string name="account_with_this_username_already_exists">Account with this username already exists.</string>
    <string name="username_too_short">Username too short.</string>
    <string name="username_too_long">Username too long.</string>

    <string name="email_field_required">Email field required.</string>
    <string name="account_with_this_email_already_exists">Account with this email already exists.</string>
    <string name="invalid_email_format">Invalid email format.</string>

    <string name="password_field_required">Password field required.</string>
    <string name="password_is_too_short">Password is too short.</string>
    <string name="passwords_does_not_match">Passwords does not match.</string>

    <string name="title_of_the_blog_is_required">Title of the blog is required.</string>
    <string name="title_of_the_blog_is_too_short">Title of the blog is too short.</string>
    <string name="title_of_the_blog_is_too_long">Title of the blog is too long.</string>

    <string name="body_of_the_blog_is_required">Body of the blog is required.</string>
    <string name="body_of_the_blog_is_too_short">Body of the blog is too short.</string>

    <string name="image_is_required">Image is required.</string>

    <string name="invalid_token">Invalid token.</string>

    <string name="successfully_registered_new_user">Successfully registered new user.</string>
    <string name="username_or_password_is_incorrect">Username or password is incorrect.</string>
    <string name="successfully_authenticated">Successfully authenticated.</string>
    <string name="account_updated_successfully">Account updated successfully.</string>
    <string name="current_password_is_incorrect">Current password is incorrect.</string>
    <string name="password_changed_successfully">Password changed successfully.</string>
    <string name="record_not_found">Record not found.</string>
    <string name="account_information_retrieved_successfully">Account information retrieved successfully.</string>

    <string name="can_not_upload_this_image">Can not upload this image.</string>
    <string name="blog_not_found">Blog not found.</string>
    <string name="blog_deleted_successfully">Blog deleted successfully.</string>
    <string name="you_do_not_have_permission_to_delete_this_blog">You do not have permission to delete this blog.</string>
    <string name="you_do_not_have_permission_to_update_this_blog">You do not have permission to update this blog.</string>
    <string name="invalid_page">Invalid page.</string>
    <string name="blog_list_retrieved_successfully">Blog list retrieved successfully.</string>
    <string name="blog_retrieved_successfully">Blog retrieved successfully.</string>
    <string name="is_author_of_the_blog_retrieved_successfully">Is author of the blog retrieved successfully.</string>
    <string name="blog_updated_successfully">Blog updated successfully.</string>
    <string name="blog_created_successfully">Blog created successfully.</string>

    <string name="error_unknown">Unknown Error.</string>
    <string name="unable_to_resolve_host">Unable to resolve host.</string>
    <string name="unable_to_do_operation_wo_internet">Can not do that operation without an internet connection.</string>
    <string name="error_check_network_connection">Check network connection.</string>

    <string name="generic_error">Error</string>
    <string name="generic_success">Success</string>
    <string name="error_save_auth_token">Error saving authentication token.\nTry restarting the app.</string>
    <string name="error_save_account_properties">Error saving account properties.\nTry restarting the app.</string>
    <string name="response_check_previous_auth_user_done">Done checking for previously authenticated user.</string>
    <string name="something_wrong_with_image">Something wrong with image.</string>

    <string name="unknown_error">Unknown Error</string>

</resources>