<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000"
        android:text="@string/filter_options" />

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/author_or_date" />

        <RadioButton
            android:id="@+id/filter_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_author"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/order_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/asc_desc" />

        <RadioButton
            android:id="@+id/filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_asc"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_desc"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog_filter_cancel_button"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog_filter_apply_button"
            android:textSize="16sp"
            android:textColor="@color/blackDark" />

    </LinearLayout>

</LinearLayout>