<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.create_blog.CreateBlogFragment"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/blog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLength="60"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/blog_image"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:hint="@string/create_blog_fragment_hint_write_a_blog_title"
            android:textColor="#000"
            android:textSize="19sp"
            android:textStyle="bold"
            android:autofillHints=""
            android:inputType="text" />

        <ImageView
            android:id="@+id/blog_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/blog_title"
            app:layout_constraintBottom_toTopOf="@+id/update_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description_blog_image" />

        <TextView
            android:id="@+id/update_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/blog_image"
            app:layout_constraintBottom_toTopOf="@+id/container1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="5dp"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/create_blog_fragment_touch_to_change_image"
            android:gravity="center"
            android:background="@color/grey3" />

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/update_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/blog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="10"
                android:gravity="start"
                android:hint="@string/create_blog_fragment_hint_write_some_content"
                android:textColor="#000"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:autofillHints=""
                android:inputType="textMultiLine" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>